/cp 2014-02-28  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/58610
	* cp-tree.h (DECL_DELETED_FN): Use LANG_DECL_FN_CHECK.
	* call.c (print_z_candidate): Remove STRIP_TEMPLATE use.
	* lambda.c (maybe_add_lambda_conv_op): Likewise.

/testsuite
2014-02-28  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/58610
	* g++.dg/cpp0x/constexpr-ice11.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@208226 138bc75d-0d04-0410-961f-82ee72b054a4